--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<urcap.install.password>easybot</urcap.install.password>
 
 		<!--Install path for the UR Sim-->
-		<ursim.home></ursim.home>
+		<ursim.home>/home/ur/ursim/ursim-5.3.0.64176</ursim.home>
 
 		<!--Host and standard user/password for UR Sim running in a VM-->
 		<ursimvm.install.host></ursimvm.install.host>
